Revert "Update .gitlab-ci.yml"
This reverts commit c5cd2c46e16700c7b48cfb45c5b3a0c6d0b0de38

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,6 @@ deploy:
     - rm -rf /temp/*
     - cp -R ./build/* /temp
   tags:
-    - parsaarvaneh-kafka-frontend
+    - KHUserver
   only:
     - production
