--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^4.8.6",
-    "node-sass": "^4.14.1",
+    "antd": "^4.11.2",
     "rc-tween-one": "^2.7.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "sass": "^1.32.5",
+    "typescript": "^4.1.3",
+    "web-vitals": "^1.1.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.10",
+    "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.6",
-    "prettier": "^2.2.0"
+    "@types/react-router-dom": "^5.1.7",
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
