--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "antd": "^4.15.1",
+    "font-awesome": "^4.7.0",
     "jalali-moment": "^3.3.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-froala-wysiwyg": "^3.2.6-1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
