--- a/package.json
+++ b/package.json
@@ -3,33 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^4.15.5",
+    "@types/react-test-renderer": "^17.0.1",
+    "antd": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jalali-moment": "^3.3.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-froala-wysiwyg": "^3.2.6-1",
+    "react-froala-wysiwyg": "^4.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "sass": "^1.32.13",
-    "typescript": "^4.2.4",
-    "web-vitals": "^1.1.2"
+    "react-test-renderer": "^17.0.2",
+    "sass": "^1.35.0",
+    "typescript": "^4.3.2",
+    "web-vitals": "^2.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.3",
-    "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.5",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.23.0",
-    "@typescript-eslint/parser": "^4.23.0",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
-    "prettier": "^2.3.0"
+    "eslint-plugin-react": "^7.24.0",
+    "prettier": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
