--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "react-scripts test --coverage --watchAll"
+    "test": "react-scripts test --coverage --watchAll --silent"
   },
   "eslintConfig": {
     "extends": [
